--- a/jeu-angular/app/partials/play.html
+++ b/jeu-angular/app/partials/play.html
@@ -1,7 +1,7 @@
 <div role="main">
 		<p><img ng-src="{{actor.photo}}" alt="" class="photo"></p>
 		<p class="right"><span id="timer"></span></p>
-		<label for="playrange">Déverouiller pour suivant</label>
-<input type="range" name="slider" id="playrange" value="0" min="0" max="2" />
+		<label for="playrange">Déverouiller pour suivant <span>{{nextid}}</span></label>
+<input  type="range" name="slider" id="playrange" value="0" min="0" max="2" />
 	</div>
 </div>
