--- a/butterfly/views/home.ejs
+++ b/butterfly/views/home.ejs
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
     <script>
-        var socket = io('http://192.168.0.14:3000');
+        var socket = io('http://<%=core%>:4000');
         socket.on('c', function(coords){
             //console.log("received coords:" + coords.x + "," + coords.y + "," + coords.from);
             var from = coords.f;
