--- a/butterfly/views/m.ejs
+++ b/butterfly/views/m.ejs
@@ -16,9 +16,17 @@
 
     body {
         height: 100%;
+        display: flex;
+    }
+    .main {
+        margin: auto;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 </style>
-
+<div class="main">
+    Your sense of touch is just ones and zeros<br/>
+</div>
 <script type="text/javascript" src="js/touch.js"></script>
 <script type="text/javascript">
     $(document).ready(function(){
