--- a/butterfly/views/scripts.ejs
+++ b/butterfly/views/scripts.ejs
@@ -2,3 +2,5 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
     <script type="text/javascript" src="js/jquery.ba-throttle-debounce.js"></script>
+    <script type="text/javascript" src="js/jquery.vibrate.js"></script>
+    
