--- a/butterfly/views/m.ejs
+++ b/butterfly/views/m.ejs
@@ -17,11 +17,13 @@
     body {
         height: 100%;
         display: flex;
+        background-color: black;
     }
     .main {
         margin: auto;
         margin-left: 20px;
         margin-right: 20px;
+        color: white;
     }
 </style>
 <div class="main">
