--- a/ergo/views/home.ejs
+++ b/ergo/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <% include scripts.ejs %>
     <link rel="stylesheet" href="app.css"/>
-    <script type="text/javascript" src="js/fs.js"></script>
+    <script type="text/javascript" src="js/ergo.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             console.log("ready");
