--- a/ergo/views/home.ejs
+++ b/ergo/views/home.ejs
@@ -14,7 +14,11 @@
 
 	<main>
 		<div class="item">A</div>
-		<div class="item">B</div>
+        <div class="item">B</div>
+        <div class="item">C</div>
+        <div class="item">D</div>
+        <div class="item">E</div>
+		<div class="item">F</div>
 	</main>
 
 
