--- a/ergo/views/scripts.ejs
+++ b/ergo/views/scripts.ejs
@@ -1,5 +1,10 @@
     <meta name="viewport" content="width=320, user-scalable=no" />
     <meta name="theme-color" content="#262728" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="green">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="msapplication-tap-highlight" content="no" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="js/jquery.vibrate.js"></script>
